--- a/videos/build.gradle
+++ b/videos/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-    
+	testImplementation 'com.h2database:h2:1.3.148'
+
 }
 
 test {
