correção name liquibase e entidade

--- a/videos/src/main/resources/db/master.yaml
+++ b/videos/src/main/resources/db/master.yaml
@@ -7,3 +7,7 @@ databaseChangeLog:
       file: db/changelog/20210603165800_cast_members_schema.yaml
   - include:
       file: db/changelog/20210604100800_videos_schema.yaml
+  - include:
+      file: db/changelog/20210604164100_category_video_schema.yaml
+  - include:
+      file: db/changelog/20210604171000_genre_video_schema.yaml
