--- a/videos/build.gradle
+++ b/videos/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 	testImplementation 'com.h2database:h2:1.3.148'
 
+	implementation group: 'com.google.cloud', name: 'google-cloud-storage', version: '1.115.0'
+	implementation group: 'org.apache.tika', name: 'tika-core', version: '1.26'
+
+
 }
 
 test {
