--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.12.RELEASE'
+    id 'org.springframework.boot' version '2.5.8'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+//    id 'eclipse'
 }
 
 group = 'br.com.codeflix'
@@ -19,45 +20,47 @@ repositories {
 }
 
 ext {
-    set('springCloudGcpVersion', "2.0.3")
-    set('springCloudVersion', "Hoxton.SR11")
-    set('testcontainersVersion', "1.15.3")
+    // set('springCloudGcpVersion', "2.0.7")
+    // set('springCloudVersion', "2020.0.5")
+    set('testcontainersVersion', "1.16.2")
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    // implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-starter'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
-    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
-    implementation 'com.google.cloud:spring-cloud-gcp-starter'
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
-    implementation 'org.liquibase:liquibase-core:4.3.4'
+//    implementation 'javax.validation:validation-api:2.0.1.Final'
+    // implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+//    implementation 'org.liquibase:liquibase-core'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:mysql'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // testImplementation 'org.springframework.amqp:spring-rabbit-test'
+//    testImplementation 'org.testcontainers:junit-jupiter'
+//    testImplementation 'org.testcontainers:mysql'
+//    testImplementation 'org.testcontainers:rabbitmq'
     testImplementation 'com.h2database:h2'
 
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '1.26'
+
+    implementation 'org.modelmapper:modelmapper:2.4.5'
+    implementation 'com.github.dozermapper:dozer-core:6.5.2'
+
+    // Remover mapstruct apos migração
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
-        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        // mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
+        // mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
@@ -65,24 +68,13 @@ test {
     useJUnitPlatform()
 }
 
-
-wrapper() {
-    gradleVersion = "6.9"
-    distributionUrl = distributionUrl.replace("bin", "all")
-}
-
-processResources {
-    def versionPropsFile = file("src/main/resources/version.properties")
-    if (!versionPropsFile.exists()) {
-        versionPropsFile.createNewFile()
-    }
-    if (versionPropsFile.canRead()) {
-        Properties versionProps = new Properties()
-        versionProps.load(new FileInputStream(versionPropsFile))
-        versionProps['version'] = project.getVersion()
-        versionProps['build.date'] = new Date().format('dd/MM/yyyy HH:mm:ss')
-        versionProps.store(versionPropsFile.newWriter(), null)
-    } else {
-        throw new GradleException("Could not read version.properties!!!")
-    }
-}
+//eclipse {
+//    classpath {
+//        containers 'org.eclipse.buildship.core.gradleclasspathcontainer'
+//        file.whenMerged { cp ->
+//            def entries = cp.entries;
+//            def src = new org.gradle.plugins.ide.eclipse.model.SourceFolder('build/generated/sources/annotationProcessor/java/main/', null)
+//            entries.add(src)
+//        }
+//    }
+//}
